--- a/livetv.html
+++ b/livetv.html
@@ -185,43 +185,9 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 08.04.2025</b>
-        <p>10:20 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 10:45 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:10 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>12:35 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>12:50 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>С 13:15 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>15:50 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>17:55 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>18:15 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:35 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>19:00 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 19:25 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>23:55 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <b>Расписание на **.04.2025</b>
+        <p>8:00 МСК:</p>
+        <p>Ошибка загрузки расписания вещания</p>
 
 
 
