--- a/index.html
+++ b/index.html
@@ -186,9 +186,45 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на **.04.2025</b>
-        <p>8:00 МСК:</p>
-        <p>Ошибка загрузки расписания вещания</p>
+        <b>Расписание на 13.04.2025</b>
+        <p>12:30 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>12:50 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 13:15 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>14:40 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>15:05 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>15:20 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>С 15:45 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>18:20 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>20:25 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>20:45 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>21:05 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>21:30 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>22:10 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 22:35 МСК:</p>
+        <p>Продолжение вещания</p>
 
 
 
