--- a/livetv.html
+++ b/livetv.html
@@ -185,9 +185,7 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 03.05.2025</b>
-        <p>10:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <b>Расписание на 04.05.2025</b>
         <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>10:20 МСК:</p>
@@ -221,11 +219,13 @@ window.onclick = function(event) {
         <p>18:35 МСК:</p>
         <p>- К/Ф "Карачун"</p>
         <p>19:00 МСК:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>19:40 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 19:25 МСК:</p>
+        <p>С 20:05 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>23:55 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>22:00 МСК:</p>
+        <p>- К/ф "Семейная связь"</p>
 
 
 
