--- a/index.html
+++ b/index.html
@@ -186,50 +186,55 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 08.05.2025</b>
-        <p>7:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>7:02 МСК:</p>
+        <b>Расписание на 09.05.2025</b>
+        <p>9:00 МСК:</p>
+        <p>- К/ф "Помни!"</p>
+        <p>9:11 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>7:20 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 7:45 МСК:</p>
+        <p>С 9:30 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:10 МСК:</p>
+        <p>10:45 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>9:35 МСК:</p>
+        <p>11:10 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>9:50 МСК:</p>
+        <p>11:25 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 11:15 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:50 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>14:55 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>15:15 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>12:00 МСК:</p>
+        <p>- К/ф "Помни!"</p>
+        <p>12:10 МСК:</p>
+        <p>- К/ф "Семейная связь"</p>
+        <p>12:30 МСК:</p>
+        <p>- К/ф "Беседа"</p>
+        <p>12:55 МСК:</p>
+        <p>- К/ф "Чудеса случаются"</p>
+        <p>13:30 МСК:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>14:30 МСК:</p>
+        <p>- К/ф "Страйдер"</p>
+        <p>14:40 МСК:</p>
+        <p>- К/ф "Страйдер 2"</p>
+        <p>15:25 МСК:</p>
+        <p>- К/ф "Помни!"</p>
         <p>15:35 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>16:00 МСК:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 16:25 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>20:55 МСК:</p>
+        <p>- К/ф "Семейная связь"</p>
+        <p>16:05 МСК:</p>
+        <p>- К/ф "Скейт"</p>
+        <p>16:18 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>21:15 МСК:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 21:30 МСК:</p>
+        <p>17:35 МСК:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>18:45 МСК:</p>
+        <p>- К/ф "Помни!"</p>
+        <p>18:55 МСК:</p>
+        <p>- К/ф "Семейная связь"</p>
+        <p>19:15 МСК:</p>
+        <p>- К/ф "Страйдер"</p>
+        <p>19:25 МСК:</p>
+        <p>- К/ф "Страйдер 2"</p>
+        <p>19:40 МСК:</p>
         <p>Продолжение вещания</p>
 
 
