--- a/livetv.html
+++ b/livetv.html
@@ -186,62 +186,63 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 06.07.2025</b>
-        <p>00:40 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>05:00 МСК:</p>
+        <b>Расписание на 07.07.2025</b>
+        <p>9:00 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>9:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>05:20 МСК:</p>
-        <p>Перерыв вещания</p>
-        <br>
-        <p>11:02 МСК:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:20 МСК:</p>
+        <p>9:35 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 11:45 МСК:</p>
+        <p>С 9:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:00 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>13:10 МСК:</p>
-        <p>- К/Ф "Скейт"</p>
-        <p>13:25 МСК:</p>
+        <p>11:25 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>13:45 МСК:</p>
+        <p>11:45 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>14:05 МСК:</p>
+        <p>12:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>С 14:30 МСК:</p>
+        <p>12:25 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>С 12:40 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>17:00 МСК:</p>
+        <p>14:25 МСК:</p>
+        <p>- Семейная связь</p>
+        <p>15:15 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>17:25 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>19:40 МСК:</p>
+        <p>17:15 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>20:00 МСК:</p>
+        <p>17:40 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>20:20 МСК:</p>
+        <p>18:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>20:45 МСК:</p>
-        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
-        <p>21:30 МСК:</p>
+        <p>18:20 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>18:35 МСК:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 21:50 МСК:</p>
+        <p>С 19:00 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>22:45 МСК:</p>
+        <p>21:10 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>23:20 МСК:</p>
-        <p>- К/ф "Семейная связь"</p>
+        <p>22:50 МСК:</p>
+        <p>- К/ф "Беседа"</p>
+        <p>23:36 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <br>
+        <b>Расписание на 08.07.2025</b>
+        <p>00:15 МСК:</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>С 00:30 МСК:</p>
+        <p>Продолжение вещания</p>
 
 
 
