--- a/index.html
+++ b/index.html
@@ -191,57 +191,58 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 09.07.2025</b>
-        <p>9:00 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>9:02 МСК:</p>
+        <b>Расписание на 12.07.2025</b>
+        <p>11:00 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>11:15 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>С 9:20 МСК:</p>
+        <p>11:35 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 11:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер" (18+)</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:45 МСК:</p>
+        <p>13:25 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>11:10 МСК:</p>
+        <p>13:45 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>11:25 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>11:35 МСК:</p>
+        <p>14:00 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>12:15 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>12:40 МСК:</p>
+        <p>14:25 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>13:40 МСК:</p>
-        <p>- Чудеса случаются</p>
-        <p>15:25 МСК:</p>
-        <p>- Страйдер (18+)</p>
-        <p>15:35 МСК:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>15:45 МСК:</p>
+        <p>С 14:40 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер"</p>
+        <p>- Короткометражный фильм "Семейная связь"</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>16:25 МСК:</p>
         <p>- Семейная связь</p>
-        <p>17:40 МСК:</p>
-        <p>- Дом забытых вещей</p>
-        <p>17:55 МСК:</p>
-        <p>- Там, где горы встречаются с морем</p>
-        <p>18:30 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>19:35 МСК:</p>
-        <p>- Импульс - шаг в будущее</p>
-        <p>20:30 МСК:</p>
-        <p>- Страйдер (18+)</p>
-        <p>20:40 МСК:</p>
-        <p>- Страйдер 2 (18+)</p>
-        <p>21:50 МСК:</p>
-        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
-        <p>22:30 МСК:</p>
+        <p>17:15 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>19:15 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>19:40 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>23:05 МСК:</p>
+        <p>20:00 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>20:20 МСК:</p>
         <p>- Дом забытых вещей</p>
-        <p>23:15 МСК:</p>
+        <p>20:35 МСК:</p>
+        <p>- К/ф "Черепаха"</p>
+        <p>С 21:00 МСК:</p>
         <p>Продолжение вещания</p>
+        <p>23:10 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <br>
+        <b>Расписание на 13.07.2025</b>
+        <p>00:50 МСК:</p>
+        <p>- К/ф "Беседа"</p>
+
 
 
 
