--- a/index.html
+++ b/index.html
@@ -191,59 +191,59 @@ window.onclick = function(event) {
 
 </div>
 <div class="title1">
-        <b>Расписание на 15.07.2025</b>
-        <p>10:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>10:15:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:35:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>С 11:00:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>12:45:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>13:00:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>13:25:</p>
-        <p>- Дом забытых вещей</p>
-        <p>С 13:40:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>15:25:</p>
-        <p>- Семейная связь</p>
-        <p>16:15:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>18:15:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>18:40:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>19:00:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>19:20:</p>
-        <p>- Дом забытых вещей</p>
-        <p>19:35:</p>
-        <p>- К/ф "Черепаха"</p>
-        <p>20:00:</p>
-        <p>Продолжение вещания</p>
-        <p>22:10:</p>
-        <p>- Дом забытых вещей</p>
-        <p>23:50:</p>
-        <p>- К/ф "Беседа"</p>
-        <br>
         <b>Расписание на 16.07.2025</b>
-        <p>00:36:</p>
+        <p>10:00 МСК:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>10:02 МСК:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>С 10:20 МСК:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер" (18+)</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>11:45 МСК:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>12:10 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>12:25 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>12:35 МСК:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>13:15 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>13:40 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>14:40 МСК:</p>
+        <p>- Чудеса случаются</p>
+        <p>16:25 МСК:</p>
+        <p>- Страйдер (18+)</p>
+        <p>16:35 МСК:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>16:45 МСК:</p>
+        <p>- Семейная связь</p>
+        <p>18:40 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>18:55 МСК:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>19:30 МСК:</p>
+        <p>Продолжение вещания</p>
+        <p>20:35 МСК:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>21:30 МСК:</p>
+        <p>- Страйдер (18+)</p>
+        <p>21:40 МСК:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>22:50 МСК:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>23:30 МСК:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <br>
+        <b>Расписание на 17.07.2025</b>
+        <p>00:05 МСК:</p>
+        <p>- Дом забытых вещей</p>
+        <p>00:15 МСК:</p>
+        <p>Перерыв вещания</p>
 
 
 
