--- a/livetv.html
+++ b/livetv.html
@@ -186,61 +186,55 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 19.07.2025</b>  
-        <p>7:00:</p>
-        <p>- Дом забытых вещей</p>
-        <p>7:15:</p>
+        <b>Расписание на 20.07.2025</b>  
+        <p>11:02:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>7:35:</p>
+        <p>11:20:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 8:00:</p>
+        <p>С 11:45:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:25:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>9:45:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>10:00:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>10:25:</p>
+        <p>13:00:</p>
         <p>- Дом забытых вещей</p>
-        <p>С 10:40:</p>
+        <p>13:10:</p>
+        <p>- К/Ф "Скейт"</p>
+        <p>13:25:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>13:45:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>14:05:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>С 14:30:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Короткометражный фильм "Семейная связь"</p>
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>12:25:</p>
-        <p>- Семейная связь</p>
-        <p>13:15:</p>
+        <p>17:00:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>15:15:</p>
+        <p>17:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>19:40:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>15:40:</p>
+        <p>20:00:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>16:00:</p>
+        <p>20:20:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>16:20:</p>
-        <p>- Дом забытых вещей</p>
-        <p>16:35:</p>
+        <p>20:45:</p>
+        <p>- Реальность полёта <mark>По воскресеньям</mark></p>
+        <p>21:30:</p>
         <p>- К/ф "Черепаха"</p>
-        <p>С 18:00:</p>
+        <p>С 21:50:</p>
         <p>Продолжение вещания</p>
-        <p>19:10:</p>
+        <p>22:45:</p>
         <p>- Дом забытых вещей</p>
-        <p>20:50:</p>
-        <p>- К/ф "Беседа"</p>
-        <p>21:36:</p>
-        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>22:15:</p>
-        <p>- Короткометражный фильм "Семейная связь"</p>
-        <p>С 22:30:</p>
-        <p>Продолжение вещания</p>
+        <p>23:20:</p>
+        <p>- К/ф "Семейная связь"</p>
 
    </div>
 </div>
