--- a/livetv.html
+++ b/livetv.html
@@ -186,7 +186,59 @@ window.onclick = function(event) {
           <iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239083&hd=1&autoplay=1" width="640" height="360" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 28.08.2025</b>
+        <b>Расписание на 29.08.2025</b>
+        <p>10:00:</p>
+        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
+        <p>10:02:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>С 10:20:</p>
+        <p>- Фильм "Чудеса случаются"</p>
+        <p>- Короткометражный фильм "Страйдер" (18+)</p>
+        <p>- "Импульс - шаг в будущее"</p>
+        <p>- Короткометражный фильм "Беседа"</p>
+        <p>- Короткометражный фильм "Скейт"</p>
+        <p>11:45:</p>
+        <p>- К/Ф "ЭГО"</p>
+        <p>12:10:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
+        <p>12:25:</p>
+        <p>- Дом забытых вещей</p>
+        <p>12:35:</p>
+        <p>- К/Ф "Карачун"</p>
+        <p>13:15:</p>
+        <p>Продолжение вещания</p>
+        <p>13:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>14:40:</p>
+        <p>- Чудеса случаются</p>
+        <p>16:25:</p>
+        <p>- Страйдер (18+)</p>
+        <p>16:35:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>16:45:</p>
+        <p>- Семейная связь</p>
+        <p>18:40:</p>
+        <p>- Дом забытых вещей</p>
+        <p>18:55:</p>
+        <p>- Там, где горы встречаются с морем</p>
+        <p>19:30:</p>
+        <p>Продолжение вещания</p>
+        <p>20:35:</p>
+        <p>- Импульс - шаг в будущее</p>
+        <p>21:30:</p>
+        <p>- Страйдер (18+)</p>
+        <p>21:40:</p>
+        <p>- Страйдер 2 (18+)</p>
+        <p>22:50:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>23:30:</p>
+        <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p><br>
+        <b>Расписание на 29.08.2025</b>
+        <p>00:05:</p>
+        <p>- Дом забытых вещей</p>
+        <p>00:15:</p>
+        <p>Перерыв вещания</p>  
+        <!-- <b>Расписание на 28.08.2025</b>
         <p>10:00:</p>
         <p>- Дом забытых вещей</p>
         <p>10:15:</p>
@@ -239,7 +291,7 @@ window.onclick = function(event) {
         <p>00:45:</p>
         <p>- "ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
         <p>00:55:</p>
-        <p>Перерыв вещания</p>
+        <p>Перерыв вещания</p> -->
 
    </div>
 </div>
